--- a/DSWM/Curriculo/index.html
+++ b/DSWM/Curriculo/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <img src="Foto.jpg" alt="Ft" id="Foto">
-    <p>Idade: <strong> 23 Anos </strong> </p>
     <p>Nome: <strong> Caio Eduardo Gemin Guarienti </strong> </p>
+    <p>Idade: <strong> 23 Anos </strong> </p>
     <p>Cidade onde vivo: <strong> Prudentópolis </strong> </p>
     <p>Email: <strong> caio.eduardo2042@gmail.com </strong> </p>
     <p></p>
@@ -20,12 +20,12 @@
 <h2><strong>Experiências: </strong></h2>
 <p>Já trabalhei como garçom em um bar, fui atendente em uma loja de especiarias, e hoje trabalho em uma Assessoria Cartorária. </p>
 <h2><strong>Me contate: </strong></h2>
-    <a href="https.//wa.me/5542998591077" target="_blank" color: white>Whatsapp </a> 
- </div>
-
-
-
-
-
+    <a href="https://wa.me/5542998591077" target="_blank">Whatsapp </a> 
+    <p><a href="https://www.linkedin.com/in/caio-eduardo-b63343353" target="_blank">LinkedIN </a></p>
+    <p><a href="https://www.instagram.com/caiogemin_/" target="_blank">Instagram</a></p>
+</div>
+<div id="rodapé">
+<p>Desenvolvido por Caio Eduardo Gemin Guarienti</p>
+</div>
     </body>
 </html>
