--- a/DSWM/Curriculo/index.html
+++ b/DSWM/Curriculo/index.html
@@ -8,15 +8,14 @@
     <h1><strong>Sobre Mim</strong></h1>
 </head>
 <body>
+    <div id="content">
     <img src="Foto.jpg" alt="Ft" id="Foto">
-    <p>Nome: <strong> Caio Eduardo Gemin Guarienti </strong> </p>
-    <p>Idade: <strong> 23 Anos </strong> </p>
-    <p>Cidade onde vivo: <strong> Prudentópolis </strong> </p>
-    <p>Email: <strong> caio.eduardo2042@gmail.com </strong> </p>
-    <p></p>
+        <p>Olá, sou Caio Eduardo Gemin Guarienti, tenho 23 anos, moro em  Prudentópolis - PR, e atualmente estou no 3º período de Engenharia de Software na Campo Real. </p>
+        </p>
+    </div>  
  <div id="quad" >
-<h2><strong> Fomação:  </strong></h2>
-<p>Estou Cursando Engenharia de Software na Campo Real. Atualmente no 3º período.</p>
+<h2><strong> Habilidades:  </strong></h2>
+<p>Comunicação Eficaz, Adaptabilidade, Proatividade, Atendimento ao cliente, Conhecimento em Inglês. </p>
 <h2><strong>Experiências: </strong></h2>
 <p>Já trabalhei como garçom em um bar, fui atendente em uma loja de especiarias, e hoje trabalho em uma Assessoria Cartorária. </p>
 <h2><strong>Me contate: </strong></h2>
